examples/errors/mod_by_zero.pigsh
# 错误：取模除以零
var a 10
var b 0
mod result a b
